tests/baselines/reference/conditionalExpressionNewLine7.errors.txt
tests/cases/compiler/conditionalExpressionNewLine7.ts(1,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/compiler/conditionalExpressionNewLine7.ts(2,3): error TS2552: Cannot find name 'b'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine7.ts(3,3): error TS2552: Cannot find name 'c'. Did you mean 'v'?


==== tests/cases/compiler/conditionalExpressionNewLine7.ts (3 errors) ====
    var v = a ? 
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
      b :
      ~
!!! error TS2552: Cannot find name 'b'. Did you mean 'v'?
      c;
      ~
!!! error TS2552: Cannot find name 'c'. Did you mean 'v'?